--- a/draft-js-mention-plugin/package.json
+++ b/draft-js-mention-plugin/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "draft-js-mention-plugin",
-  "version": "2.0.0-beta10",
+  "name": "kaneoh-draft-js-mention-plugin",
+  "version": "0.0.1",
   "description": "Mention Plugin for DraftJS",
   "author": {
     "name": "Nik Graf",
